--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ services:
   footballsquaregameservices:
     image: footballsquaregameservices
     build:
-      context: FootballSquareGameServices
+      context: FootballSquareGameServicesDotNet
       dockerfile: Dockerfile
     ports:
       - '3101:8080'
@@ -42,7 +42,7 @@ services:
   db:
     image: mysql
     volumes:
-      - db-data:/var/lib/mysql
+      - ./db-data:/var/lib/mysql
     restart: always
     environment:
       MYSQL_ROOT_PASSWORD: example
@@ -70,6 +70,3 @@ services:
     environment:
       PMA_HOST: db
       MYSQL_ROOT_PASSWORD: example
-
-volumes:
-  db-data:
